# uqa

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  HISTORY.md  README.md  docs.html  examples.html  index.html  pyproject.toml  showcase.html  style.css  theory.html  usql.py
.github/workflows/: benchmarks.yml  deploy-playground.yml  lint.yml  tests.yml  version-check.yml
benchmarks/: bench_calibration.py  bench_compiler.py  bench_e2e.py  bench_execution.py  bench_external_prior.py  bench_graph.py  bench_graph_advanced.py  bench_graph_centrality.py  bench_hybrid_fusion.py  bench_multi_field.py  bench_named_graphs.py  bench_planner.py  bench_posting_list.py  bench_scoring.py  bench_scoring_advanced.py  bench_storage.py  conftest.py
benchmarks-data/: data.js  index.html
benchmarks/data/: generators.py  schemas.py
data/: download_nyc_taxi.sh
docs/design/: postgresql17-implementation-status.md  unified-query-algebra-prototype.md  uqa-database-implementation-plan.md
docs/references/: technical-overview.md  uqa-api-manual.md  uqa-reference.md  usql-grammar.md  usql-manual.md
examples/: academic_search.py  demo.sql  ecommerce_search.py  knowledge_graph.py  quickstart.py  sql_queries.py
examples/fluent/: analysis.py  export.py  fusion_advanced.py  graph.py  graph_advanced.py  graph_centrality.py  hierarchical.py  multi_paradigm.py  named_graphs.py  scoring.py  text_search.py  vector_and_hybrid.py
examples/showcase/: bayesian_neural.py  calibration_matters.py  deep_fusion.py  deep_fusion_cnn.py  deep_fusion_gnn.py  deep_fusion_nn.py  deep_fusion_resnet.py  deep_learn_attention.py  deep_learn_mnist.py  deep_learn_mnist_pruning.py  deep_learn_tiny_imagenet.py  knowledge_discovery.py
examples/sql/: analysis.py  analytics.py  basics.py  calibration.py  export.py  fdw.py  fts_match.py  functions.py  fusion.py  fusion_gating.py  graph.py  graph_centrality.py  graph_delta.py  joins_and_subqueries.py  named_graphs.py  nyc_taxi.py  scoring_advanced.py  spatial.py  synonyms.py  temporal_graph.py
playground/: index.html  package-lock.json  package.json  vite.config.ts
playground/assets/: App-B-n6SnR4.js  App-B3GTXk_5.js  App-DaxW2fsH.js  App-nzWRYobN.js  index-BAIcirbk.css  index-BDprXI6S.css  index-DZxHL2II.css  index-G99szBZ6.js  index-G_QiQ6CH.css  index-ZJs_WkWZ.js  index-eciZ_AzV.js  index-rsku7RgF.js  uqa.es-ArgbvMab.js  uqa.es-CGo4Yxqs.js  uqa.es-DAILqO4B.js  uqa.es-vga-Odu4.js
playground/src/: App.tsx  main.tsx
playground/src/components/: UQAPlayground.tsx  example-queries.ts  use-uqa-engine.ts
uqa/: __init__.py  cancel.py  cli.py  engine.py
uqa/analysis/: __init__.py  analyzer.py  char_filter.py  token_filter.py  tokenizer.py
uqa/api/: __init__.py  query_builder.py
uqa/core/: functor.py  hierarchical.py  posting_list.py  types.py
uqa/execution/: batch.py  physical.py  relational.py  scan.py  spill.py
uqa/fdw/: __init__.py  arrow_handler.py  duckdb_handler.py  foreign_table.py  handler.py
uqa/fusion/: attention.py  boolean.py  learned.py  log_odds.py  query_features.py
uqa/graph/: centrality.py  cross_paradigm.py  delta.py  graph_embedding.py  incremental_match.py  index.py  join.py  message_passing.py  operators.py  pattern.py  posting_list.py  rpq_optimizer.py  store.py  temporal_filter.py  temporal_pattern_match.py  temporal_traverse.py  versioned_store.py
uqa/graph/cypher/: ast.py  compiler.py  lexer.py  parser.py
uqa/joins/: __init__.py  base.py  cross.py  cross_paradigm.py  index.py  inner.py  outer.py  semi.py  sort_merge.py
uqa/operators/: __init__.py  _backend.py  aggregation.py  attention.py  base.py  boolean.py  calibrated_vector.py  deep_fusion.py  deep_learn.py  hierarchical.py  hybrid.py  learned_fusion.py  multi_field.py  multi_stage.py  primitive.py  progressive_fusion.py  sparse.py
uqa/planner/: cardinality.py  cost_model.py  executor.py  join_enumerator.py  join_graph.py  join_order.py  optimizer.py  parallel.py
uqa/scoring/: background_distribution.py  bayesian_bm25.py  bm25.py  calibration.py  distance_gmm.py  external_prior.py  fusion_wand.py  multi_field.py  parameter_learner.py  vector.py  vector_calibrator.py  vector_fallback.py  wand.py  weighted_kde.py
uqa/search/: highlight.py
uqa/sql/: compiler.py  expr_evaluator.py  fts_query.py  table.py
uqa/storage/: block_max_index.py  btree_index.py  catalog.py  document_store.py  index_abc.py  index_manager.py  index_types.py  inverted_index.py  ivf_index.py  managed_connection.py  spatial_index.py  sqlite_document_store.py  sqlite_graph_store.py  sqlite_inverted_index.py  sqlite_vector_index.py  transaction.py  vector_index.py
uqa/storage/abc/: __init__.py  document_store.py  graph_store.py  inverted_index.py
uqa/tests/: conftest.py  test_adaptive_fusion.py  test_aggregates.py  test_algebraic_simplification.py  test_analysis.py  test_attention_fusion.py  test_calibration.py  test_catalog.py  test_cli.py  test_conv_layer.py  test_correlated_subquery.py  test_cost_optimizer.py  test_cross_paradigm_optimizer.py  test_cross_paradigm_optimizer_new.py  test_cte.py  test_cypher.py  test_datetime.py  test_ddl.py  test_deep_fusion.py  test_deep_fusion_nn.py  test_deep_learn.py  test_dpccp.py  test_execution.py  test_expr_evaluator.py  test_external_prior.py  test_fdw.py  test_fts_match.py  test_functor.py  test_fusion.py  test_fusion_wand.py  test_graph.py  test_graph_centrality.py  test_graph_delta.py  test_graph_improvements.py  test_graph_join.py  test_graph_neural.py  test_graph_standalone_sql.py  test_index.py  test_information_theoretic.py  test_integration.py  (+52 more)
