[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[project]
name = "uqa"
version = "0.11.1"
description = "Unified Query Algebra database prototype"
license = "AGPL-3.0-only"
requires-python = ">=3.12"
readme = "README.md"
dependencies = [
    "numpy>=1.26",
    "pyarrow>=20.0",
    "bayesian-bm25>=0.8.0",
    "duckdb>=1.0",
    "hnswlib>=0.8",
    "pglast>=7.0",
    "prompt-toolkit>=3.0",
    "pygments>=2.17",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "hypothesis>=6.0",
]
benchmark = [
    "pytest>=8.0",
    "pytest-benchmark>=5.0",
]

[project.scripts]
usql = "uqa.cli:main"

[tool.pytest.ini_options]
testpaths = ["uqa/tests"]
python_files = ["test_*.py", "bench_*.py"]
markers = ["benchmark: performance benchmark tests"]
